samples/_failures_safe/1761427635_0d02d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15aada9f.c: In function ‘perform_compression’:
./samples/SAFE/__tmp_15aada9f.c:149:21: error: expected ‘;’ at end of input
  149 |         result.ratio
      |                     ^
      |                     ;
./samples/SAFE/__tmp_15aada9f.c:149:9: error: expected declaration or statement at end of input
  149 |         result.ratio
      |         ^~~~~~
./samples/SAFE/__tmp_15aada9f.c:149:9: error: expected declaration or statement at end of input
